src/component/contact/ContactStyle.scss
// mobile first
.container-contact {
    z-index: 5;
    position: relative;
    height: 80vh; // ie11 fallback
    height: calc(var(--actual-height) - 20vh);
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    text-align: justify;
    padding: 0 10vw;

    .heading-contact {
        position: relative;
        font-size: 2rem;

        h1 {
            font-weight: 500;
            letter-spacing: 0.03rem;
        }

        .line-contact {
            position: absolute;
            width: 75%;
            height: 2px;
            border-radius: 10px;
            bottom: -2%;
            left: 12.5%;
        }
    }

    .top-container-contact {
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        align-items: center;
        text-align: justify;
        height: 50%;

        .left-container-contact {
            .svg-contact {
                height: 10em;
                width: 15em;
            }
        }

        .right-container-contact {
            text-align: center;
            line-height: 5vh;
            p {
                font-size: 1rem;
                letter-spacing: 0.1em;
                word-spacing: 0.5em;
                a{
                    text-decoration: none;
                    color: inherit;

                    &:hover{
                        text-decoration: underline;
                    }
                }
                span {
                    font-weight: 600;
                    font-size: 1.5rem;
                }
            }
        }
    }

    .bottom-container-contact {
        height: 20%;
        width: 315px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        border-radius: 10px;

        .top-half-bottom-container-contact,
        .bottom-half-bottom-container-contact {
            display: flex;
            width: 100%;
            height: 100%;

            div {
                position: relative;
                flex: 1 1;
                display: flex;

                div:nth-child(1) {
                    position: absolute;
                    top: 50%;
                    left: 20%;
                    transform: translateY(-50%);
                    cursor: pointer;

                    a {
                        text-decoration: none;

                        &:hover{
                            opacity: 0.8;
                        }

                        .svg-icon-contact {
                            height: 2.3em;
                            width: 2.3em;
                        }
                    }
                }

                div:nth-child(2) {
                    position: absolute;
                    top: 50%;
                    left: 42%;
                    transform: translateY(-50%);
                    cursor: pointer;

                    a {
                        text-decoration: none;
                        color: inherit;

                        &:hover{
                            opacity: 0.8;
                        }

                        p {
                            font-size: 1rem;
                        }
                    }
                }
            }
        }
    }
}

@media all and (min-width: 769px) {
    .container-contact {
        // background-color: teal;

        .heading-contact {
            display: none;
        }

        .top-container-contact {
            flex-direction: row-reverse;
            width: 100%;
            margin-bottom: 15vh;
            // background-color: teal;

            .left-container-contact {
                .svg-contact {
                    height: 15vw;
                    width: 20vw;
                }
            }

            .right-container-contact {
                text-align: left;
                line-height: 10vh;

                p {
                    font-size: 1.3vw;

                    span {
                        font-size: 2vw;
                    }
                }
            }
        }

        .bottom-container-contact {
            position: absolute;
            bottom: 0;
            width: 85%;
            flex-direction: row;
            & > div:nth-child(1) {
                width: 40%;
            }
            & > div:nth-child(2) {
                width: 40%;
            }

            .top-half-bottom-container-contact,
            .bottom-half-bottom-container-contact {
                div {
                    div:nth-child(1) {
                        left: 22%;

                        .svg-icon-contact {
                            height: 2.5vw;
                            width: 2.5vw;
                        }
                    }

                    div:nth-child(2) {
                        p {
                            font-size: 1.1vw;
                        }
                    }
                }
            }
        }
    }
}

